fix: metodos product, dependencias y rutas