@@ -3,72 +3,53 @@ package com.api.product.service;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.api.product.client.StoreClient;
 import com.api.product.dto.CategoryRequestDTO;
 import com.api.product.dto.CategoryResponseDTO;
 import com.api.product.entity.Category;
+import com.api.product.exception.BadRequestException;
+import com.api.product.exception.ConflictException;
+import com.api.product.exception.UnauthorizedException;
 import com.api.product.repository.CategoryRepository;
+import com.common_request_context_starter.context.RequestContext;
 
 import lombok.RequiredArgsConstructor;
 
-/**
- * Servicio para gestionar categorías (Category).
- * Incluye métodos para crear, actualizar, listar, buscar, activar y desactivar categorías.
- */
 @Service
 @RequiredArgsConstructor
 public class CategoryService {
 
     private final CategoryRepository categoryRepository;
+    private final StoreClient storeClient;
 
-    /**
-     * Crea una nueva categoría en la base de datos.
-     * Valida campos obligatorios y verifica que no exista otra categoría con el mismo nombre.
-     *
-     * @param dto DTO con los datos de la categoría a crear
-     * @return CategoryResponseDTO con los datos de la categoría creada
-     */
     @Transactional
     public CategoryResponseDTO createCategory(CategoryRequestDTO dto) {
+        validateAdminOrOwner();
+        UUID storeId = getStoreIdFromHeader();
 
-        try {
-            validateCategoryRequest(dto);
+        if (dto == null || dto.getName() == null || dto.getName().isBlank())
+            throw new BadRequestException("El nombre de la categoría es obligatorio");
 
-            // Validar si existe categoría con el mismo nombre
-            if (categoryRepository.existsByNameIgnoreCase(dto.getName())) {
-                throw new RuntimeException("La categoría ya existe");
-            }
+        if (categoryRepository.existsByNameIgnoreCaseAndStoreId(dto.getName(), storeId))
+            throw new ConflictException("Ya existe una categoría con ese nombre en esta tienda");
 
-            // Crear entidad Category
-            Category category = Category.builder()
-                    .name(dto.getName())
-                    .active(dto.getActive() != null ? dto.getActive() : true)
-                    .build();
+        Category category = Category.builder()
+                .name(dto.getName())
+                .storeId(storeId)
+                .active(dto.getActive() != null ? dto.getActive() : true)
+                .build();
 
-            // Guardar categoría
-            Category saved = categoryRepository.save(category);
-
-            return mapToResponse(saved);
-
-        } catch (RuntimeException e) {
-            throw new RuntimeException("Error al crear categoría: " + e.getMessage());
-        }
+        return mapToResponse(categoryRepository.save(category));
     }
 
-    /**
-     * Actualiza una categoría existente.
-     * Valida campos obligatorios y verifica que no se repita el nombre con otra categoría.
-     *
-     * @param id  UUID de la categoría
-     * @param dto DTO con los datos actualizados
-     * @return Optional con CategoryResponseDTO actualizado si existe
-     */
     @Transactional
     public Optional<CategoryResponseDTO> updateCategory(UUID id, CategoryRequestDTO dto) {
+        validateAdminOrOwner();
+        UUID storeId = getStoreIdFromHeader();
 
         Optional<Category> optional = categoryRepository.findById(id);
         if (optional.isEmpty())
@@ -76,134 +57,99 @@ public class CategoryService {
 
         Category category = optional.get();
 
-        try {
-            validateCategoryRequest(dto);
+        if (!category.getStoreId().equals(storeId))
+            throw new UnauthorizedException("Esta categoría no pertenece a tu tienda");
 
-            // Validar nombre repetido
-            if (!category.getName().equalsIgnoreCase(dto.getName())
-                    && categoryRepository.existsByNameIgnoreCase(dto.getName())) {
-                throw new RuntimeException("Ya existe otra categoría con el mismo nombre");
-            }
+        if (dto == null || dto.getName() == null || dto.getName().isBlank())
+            throw new BadRequestException("El nombre de la categoría es obligatorio");
 
-            category.setName(dto.getName());
+        if (!category.getName().equalsIgnoreCase(dto.getName()) &&
+                categoryRepository.existsByNameIgnoreCaseAndStoreId(dto.getName(), storeId))
+            throw new ConflictException("Ya existe otra categoría con ese nombre en esta tienda");
 
-            // Actualizar active si viene en el DTO
-            if (dto.getActive() != null) {
-                category.setActive(dto.getActive());
-            }
+        category.setName(dto.getName());
+        if (dto.getActive() != null)
+            category.setActive(dto.getActive());
 
-            Category saved = categoryRepository.save(category);
-
-            return Optional.of(mapToResponse(saved));
-
-        } catch (RuntimeException e) {
-            throw new RuntimeException("Error al actualizar categoría: " + e.getMessage());
-        }
+        return Optional.of(mapToResponse(categoryRepository.save(category)));
     }
 
-    /**
-     * Lista todas las categorías registradas en el sistema.
-     *
-     * @return lista completa de categorías
-     */
     @Transactional(readOnly = true)
     public List<CategoryResponseDTO> listAllCategories() {
-        return categoryRepository.findAll().stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+        UUID storeId = getStoreIdFromHeader();
+        return categoryRepository.findByStoreIdAndActiveTrue(storeId)
+                .stream().map(this::mapToResponse).toList();
     }
 
-    /**
-     * Lista todas las categorías activas en el sistema.
-     *
-     * @return lista completa de categorías activas
-     */
     @Transactional(readOnly = true)
     public List<CategoryResponseDTO> listAllActiveCategories() {
-        return categoryRepository.findByActiveTrue().stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+        UUID storeId = getStoreIdFromHeader();
+        return categoryRepository.findByStoreIdAndActiveTrue(storeId)
+                .stream().map(this::mapToResponse).toList();
     }
 
-    /**
-     * Busca una categoría por su ID.
-     *
-     * @param id UUID de la categoría
-     * @return Optional con la categoría encontrada si existe
-     */
     @Transactional(readOnly = true)
     public Optional<CategoryResponseDTO> getById(UUID id) {
-        return categoryRepository.findById(id)
-                .map(this::mapToResponse);
+        return categoryRepository.findById(id).map(this::mapToResponse);
     }
 
-    /**
-     * Desactiva una categoría del sistema (Soft Delete).
-     * Cambia el campo active a false.
-     *
-     * @param id UUID de la categoría
-     * @return Optional con la categoría desactivada si existe
-     */
     @Transactional
     public Optional<CategoryResponseDTO> inactiveCategory(UUID id) {
+        validateAdminOrOwner();
+        UUID storeId = getStoreIdFromHeader();
 
         Optional<Category> optional = categoryRepository.findById(id);
         if (optional.isEmpty())
             return Optional.empty();
 
         Category category = optional.get();
+        if (!category.getStoreId().equals(storeId))
+            throw new UnauthorizedException("Esta categoría no pertenece a tu tienda");
+
         category.setActive(false);
-
-        categoryRepository.save(category);
-
-        return Optional.of(mapToResponse(category));
+        return Optional.of(mapToResponse(categoryRepository.save(category)));
     }
 
-    /**
-     * Activa una categoría del sistema.
-     * Cambia el campo active a true.
-     *
-     * @param id UUID de la categoría
-     * @return Optional con la categoría activada si existe
-     */
     @Transactional
     public Optional<CategoryResponseDTO> activeCategory(UUID id) {
+        validateAdminOrOwner();
+        UUID storeId = getStoreIdFromHeader();
 
         Optional<Category> optional = categoryRepository.findById(id);
         if (optional.isEmpty())
             return Optional.empty();
 
         Category category = optional.get();
+        if (!category.getStoreId().equals(storeId))
+            throw new UnauthorizedException("Esta categoría no pertenece a tu tienda");
+
         category.setActive(true);
-
-        categoryRepository.save(category);
-
-        return Optional.of(mapToResponse(category));
+        return Optional.of(mapToResponse(categoryRepository.save(category)));
     }
 
-    /**
-     * Valida campos obligatorios del CategoryRequestDTO.
-     *
-     * @param dto DTO a validar
-     */
-    private void validateCategoryRequest(CategoryRequestDTO dto) {
-
-        if (dto == null || dto.getName() == null || dto.getName().isBlank()) {
-            throw new RuntimeException("El nombre de la categoría es obligatorio");
+    // ── Helpers ───────────────────────────────────────────────────────────────
+    private UUID getStoreIdFromHeader() {
+        String storeIdHeader = RequestContext.getHeader("X-Store-Id");
+        if (storeIdHeader == null || storeIdHeader.isBlank())
+            throw new BadRequestException("No se encontró el X-Store-Id en el header");
+        try {
+            return UUID.fromString(storeIdHeader);
+        } catch (IllegalArgumentException e) {
+            throw new BadRequestException("Formato inválido del storeId");
         }
     }
 
-    /**
-     * Convierte entidad Category a CategoryResponseDTO.
-     *
-     * @param category entidad Category
-     * @return CategoryResponseDTO
-     */
+    private void validateAdminOrOwner() {
+        String role = RequestContext.getHeader("X-User-Role");
+        if (!"ADMIN".equals(role) && !"OWNER".equals(role))
+            throw new UnauthorizedException("Solo el ADMIN u OWNER pueden realizar esta acción");
+    }
+
     private CategoryResponseDTO mapToResponse(Category category) {
         return CategoryResponseDTO.builder()
                 .categoryId(category.getCategoryId())
                 .name(category.getName())
-                .status(category.getActive()? "ACTIVE":"INACTIVE")
+                .status(Boolean.TRUE.equals(category.getActive()) ? "ACTIVE" : "INACTIVE")
                 .build();
     }
 }
